feat: :passport_control: added credentials check while signup
