# app/api.go
@@ -9,8 +9,9 @@ import (
 )
 
 func (app *App) InitRoutes() {
-	app.Router.HandleFunc("/user/signin", app.SigninHandler).Methods("POST")
 	app.Router.HandleFunc("/user/signup", app.SignupHandler).Methods("POST")
+	app.Router.HandleFunc("/user/signin", app.SigninHandler).Methods("POST")
+	app.Router.HandleFunc("/user/logout", app.Auth(app.LogoutHandler)).Methods("POST")
 	app.Router.HandleFunc("/user/test", app.Auth(app.TestHandler)).Methods("GET")
 	if os.Getenv("ENV") != "prod" {
 		app.Router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
